add developers to new project page
Am setting up the app to enable a user create
a new project and hire a developer for time-slots
that are posted

--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -24,11 +24,9 @@
 
   .row
     .col.s6
-      -if current_user
-        = link_to "Primary Calendar", calendars_primary_path
-        = link_to "Calendar list", calendar_list_path
-        = button_to "Create Event", create_event_path, method: :post
-    .col.s6
+      -if current_user && current_user.role == 'client'
+        = link_to "Project List", projects_path
+    .col.s6.right-align
       -if current_user
         -if current_user.role == 'client'
           .new_project
