--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -12,7 +12,7 @@
   .row
     .col.s12
       -if current_user.role == 'client'
-        .card
+        .card.pad-sides
           %table.white
             %thead
               %tr
